added log .txt file functionality

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,11 @@
 {
   "files.associations": {
     "stdio.h": "c",
-    "stdint.h": "c"
+    "stdint.h": "c",
+    "algorithm": "c",
+    "iterator": "c",
+    "xhash": "c",
+    "xtree": "c",
+    "xutility": "c"
   }
 }
